@@ -2,6 +2,9 @@ Version 3.11.1, April 1, 2021
 
 **User-visible changes:**
 
+New FAQ item "How should I annotate code that uses generics?" gives
+examples of annotations on type variables, together with their meaning.
+
 **Implementation details:**
 
 **Closed issues:**
